gcc/testsuite/gdc.test/fail_compilation/fail7886.d
// 7886

struct A {
  static if (__traits(derivedMembers, A).length) {}
}
